// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultSection renders with shouldAlertFailureCount = <false> 1`] = `
<div
  className="result-section-class-name resultSection"
  data-automation-id="result-section"
>
  <h2>
    <ResultSectionTitle
      containerClassName="result-section-class-name"
      deps={Object {}}
      shouldAlertFailuresCount={false}
      titleSize="title"
    />
  </h2>
  <ResultSectionContent
    containerClassName="result-section-class-name"
    deps={Object {}}
    shouldAlertFailuresCount={false}
  />
</div>
`;

exports[`ResultSection renders with shouldAlertFailureCount = <true> 1`] = `
<div
  className="result-section-class-name resultSection"
  data-automation-id="result-section"
>
  <h2>
    <ResultSectionTitle
      containerClassName="result-section-class-name"
      deps={Object {}}
      shouldAlertFailuresCount={true}
      titleSize="title"
    />
  </h2>
  <ResultSectionContent
    containerClassName="result-section-class-name"
    deps={Object {}}
    shouldAlertFailuresCount={true}
  />
</div>
`;

exports[`ResultSection renders with shouldAlertFailureCount = <undefined> 1`] = `
<div
  className="result-section-class-name resultSection"
  data-automation-id="result-section"
>
  <h2>
    <ResultSectionTitle
      containerClassName="result-section-class-name"
      deps={Object {}}
      titleSize="title"
    />
  </h2>
  <ResultSectionContent
    containerClassName="result-section-class-name"
    deps={Object {}}
  />
</div>
`;
